[tool.poetry]
name = "pytezos"
version = "2.5.15"
description = "Python toolkit for Tezos"
license = "MIT"
authors = ["Michael Zaikin <mz@baking-bad.org>", "Arthur Breitman", "Roman Serikov"]
readme = "README.md"
repository = "https://github.com/baking-bad/pytezos"
homepage = "https://baking-bad.github.io/pytezos/"
keywords = ['tezos', 'crypto', 'blockchain', 'xtz']
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.6"
wheel = "*"
pyblake2 = "^1.1.2"
base58 = "^1.0.3"
requests = "^2.21.0"
pendulum = "*"
loguru = "*"
netstruct = "*"
tqdm = "*"
ply = "*"
simplejson = "*"
mnemonic = "*"
fire = "*"
pyyaml = "*"
pysodium = "0.7.5"
secp256k1 = "0.13.2"
fastecdsa = "1.7.5"
bson = "^0.5.10"
strict_rfc3339 = "0.7"

[tool.poetry.dev-dependencies]
parameterized = "^0.7.0"
pytest = "^3.0"
pytest-cov = "^2.4"
sphinx = "*"
sphinx_rtd_theme = { git = "https://github.com/readthedocs/sphinx_rtd_theme.git", tag = "0.5.0rc2" }
sphinx-sitemap = "*"
sphinxcontrib-googleanalytics = "^0.1"

[tool.poetry.scripts]
pytezos = 'pytezos:cli.main'

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
